[tool.poetry]
name = "sidewalkscore"
version = "0.1.0"
description = "SidewalkScore, a network-based foundation for walkability metrics."
authors = ["Nick Bolten"]
license = "Apache-2.0"

[tool.poetry.scripts]
sidewalkscore = "sidewalkscore:cli.sidewalkscore"

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^1.6"
unweaver = {git = "https://github.com/nbolten/unweaver.git", rev="66352c1"}
pre-commit = "^1.20.0"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "18.9b0"
pre-commit = "^1.20"
dephell = "^0.8.3"
mypy = "^0.982"

[tool.black]
line-length = 79
exclude = """
(
  setup.py
)
"""

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
