[tool.poetry]
name = "sidewalkscore"
version = "0.1.0"
description = "SidewalkScore, a network-based foundation for walkability metrics."
authors = ["Nick Bolten"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
shapely = "^1.6"
entwiner = {git = "https://github.com/nbolten/entwiner.git", rev="2e7a194"}
unweaver = {git = "https://github.com/nbolten/unweaver.git", rev="a7c1b6c"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
